# cuckoo-hasura

./: .coveragerc  .env.default  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  devDockerfile  docker-compose.yml  perftesting_stream.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/: pull_request_template.md
.github/workflows/: autoblack.yml  ci_ruff.yml  ci_tests.yml  mypy.yml  pypi.yml
codegen/: README.md  __init__.py  default_config.py  example_config.py  graphql_2_python.py  model_module.py  requirements.txt
cuckoo/: __init__.py  binary_tree_node.py  conf.py  constants.py  cuckoo.py  delete.py  encoders.py  errors.py  finalizers.py  include.py  insert.py  mutation.py  query.py  root_node.py  update.py  utils.py
cuckoo/models/: __init__.py  aggregate.py  buildins.py  builtins.py  common.py  providers.py  table.py  vendors.py
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst
regions/: __init__.py  asset_region_matching_results.py  asset_region_types.py  asset_regions.py
tests/: __init__.py  conftest.py  hasura_setup_util.py  requirements.txt  test_cuckoo.py  test_delete.py  test_include.py  test_insert.py  test_mutation.py  test_query.py  test_root_node.py  test_stream.py  test_update.py  test_utils.py
tests/fixture/: __init__.py  base_fixture.py  common_fixture.py  common_utils.py  include_fixture.py  insert_fixture.py  mutation_fixture.py  query_fixture.py  update_fixture.py
tests/fixture/sample_models/: __init__.py
tests/fixture/sample_models/public/: __init__.py  address.py  article.py  author.py  author_detail.py  comment.py  details_addresses.py  public.schema.sql
tests/models/: test_common.py
