[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuckoo-hasura"
version = "0.1.4"
description = "An easy to use GraphQL query builder, optimized for Hasura."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Kenta Fried", email = "kenta.fried@gmail.com" }]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "orjson>=3.0.0",
    "pydantic>=1.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hotaru355/cuckoo-hasura"
"Bug Tracker" = "https://github.com/hotaru355/cuckoo-hasura/issues"

[project.scripts]
codegen = "codegen.graphql_2_python:run_cli"

[project.optional-dependencies]
codegen = ["case-converter>=1.1.0", "graphql-core>=3.2.3"]

[tool.setuptools]
packages = ["cuckoo", "cuckoo.models", "codegen"]
